plateforme-mys3/moto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moto
  template:
    metadata:
      labels:
        app: moto
    spec:
      containers:
        - name: moto-container
          image: ridhabucket/moto:latest
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
