plateforme-mys3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moto-service
  labels:
    app: moto
spec:
  type: LoadBalancer  # Utilise LoadBalancer pour exposer le service via une IP externe. Remplace par NodePort si nécessaire.
  ports:
    - port: 8080  # Le port sur lequel le service sera exposé
      targetPort: 8080  # Le port sur lequel l'application écoute dans le pod
      protocol: TCP
  selector:
    app: moto  # Cela doit correspondre aux labels du deployment pour que le service trouve les pods
