plateforme-mys3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: bests3.cdpi.atelier.ovh
      http:                             
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-service  
                port:
                  number: 9000
  tls:
    - hosts:
        - moto.cdpi.atelier.ovh
      secretName: moto-cdpi-atelier-ovh-tls
